global styles update

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -2,7 +2,7 @@
     --view-mobile: 375;
     --view-desktop: 1440;
 
-    --color-primary: #ED1C24;
+    --color-primary: #258faf;
     --color-white: #fff;
     --color-black: #000;
 }
