--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;500;700;800;900&display=swap');
+
+
 @import './mixin.scss';
 @import './variables.scss';
 
@@ -5,7 +8,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
@@ -14,6 +17,49 @@ a {
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+p{
+  font-size: 18px;
+  line-height: 22px;
+}
+
+img{
+  max-width: 100%;
+  height: auto;
+}
+
+.container{
+  margin-inline: auto;
+  padding: 30px 16px;
+
+  @include mediaTablet(){
+    max-width: 1440px;
+    padding: 50px 30px;
+  }
+
+  &.xs{
+    padding: 20px 16px;
+
+    @include mediaTablet(){
+      padding: 20px 30px;
+    }
+  }
+
+  &.sm{
+    @include mediaTablet(){
+      max-width: 1000px;
+      padding: 50px 50px;
+    }
+  }
+}
+
+.flex{
+  display: flex;
+  flex-direction: column;
+  gap: 30px 0;
+
+  @include mediaTablet(){
+    flex-flow: row wrap;
+    gap: 30px 15px;
+  }
+
 }
